2003-04-06  Bruno Haible  <bruno@clisp.org>

	* progname.c: Move out all methods depending on ENABLE_RELOCATABLE...
	* progreloc.c: ... to here. New file.
	* Makefile.am (libgettextlib_la_SOURCES): Add progreloc.c.
	* Makefile.msvc (OBJECTS): Add progreloc.obj.
	(progreloc.obj): New rule.
	* Makefile.vms (OBJECTS): Add progreloc.obj.
	(progreloc.obj): New rule.

2003-04-05  Bruno Haible  <bruno@clisp.org>

	* relocatable.c: Rely on DEPENDS_ON_LIBCHARSET, DEPENDS_ON_LIBICONV,
	DEPENDS_ON_LIBINTL, not on NO_LIBRARIES.
	* Makefile.am (DEFS): Define DEPENDS_ON_LIBINTL and DEPENDS_ON_LIBCONV,
	for relocatable.c.
	* Makefile.msvc (CFLAGS): Also define DEPENDS_ON_LIBINTL and
	DEPENDS_ON_LIBCONV.

2003-04-05  Bruno Haible  <bruno@clisp.org>

	* relocatable.c (_GNU_SOURCE): Define, to ensure getline() gets
	declared by <stdio.h>.

2003-03-30  Bruno Haible  <bruno@clisp.org>

	* xgetcwd.c: Include <unistd.h>.

2003-04-03  Bruno Haible  <bruno@clisp.org>

	* w32spawn.h (dup_noinherit): Signal an error instead of returning -1.
	* execute.c: Reorder includes.
	* pipe-bidi.c: Likewise.
	* pipe-in.c: Likewise.
	* pipe-out.c: Likewise.

2003-04-02  Bruno Haible  <bruno@clisp.org>

	* binary-io.h: Cosmetics. Suggested by Jim Meyering.

2003-03-30  Bruno Haible  <bruno@clisp.org>

	* Makefile.vms: New file.
	* Makefile.am (EXTRA_DIST): Add Makefile.vms.
	* execute.c (open): #undef before redefining it. Needed for VMS.
	* pipe-in.c (open): Likewise.
	* pipe-out.c (open): Likewise.

2003-03-31  Bruno Haible  <bruno@clisp.org>

	* sh-quote.c (shell_quote_length, shell_quote_copy): Handle empty
	argument string correctly.

2003-03-30  Bruno Haible  <bruno@clisp.org>

	* progname.c (ISSLASH, HAS_DEVICE, IS_PATH_WITH_DIR,
	FILESYSTEM_PREFIX_LEN): New macros.
	(maybe_executable): Make a nop on Woe32.
	(find_executable) [WIN32]: Fix compilation.

	* relocatable.h (RELOCATABLE_DLL_EXPORTED): New macro.

	* w32spawn.h: New file.